--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             status('Error: ' + xhr.status);
           },
          success: function(response) {
-          console.log(response);
+          alert(response.responseDesc);
          }
         });
         //Very important line, it disable the page refresh.
