--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Google recapcha demo - Codeforgeek</title>
+    <title>Google recapcha using Node.js demo - Codeforgeek</title>
     <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
