--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
-    <h1>Google reCAPTHA Demo</h1>
+    <h1>Google reCAPTHA Demo using Node</h1>
     <form id="comment_form" action='/submit' method="post">
       <input type="email" placeholder="Type your email" size="40"><br><br>
       <textarea name="comment" rows="8" cols="39"></textarea><br><br>
