--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
     </nav>
     <div class='form-group' style="margin-top: 100px; width : 600px; margin-left : 25%;">
-    <form id="comment_form" action='/submit' method="post">
+ <h1>Google recaptcha using Node.js</h1>   
+<form id="comment_form" action='/submit' method="post">
       <input type="email" placeholder="Type your email" size="40"><br><br>
       <textarea name="comment" rows="8" cols="39"></textarea><br><br>
       <div class="g-recaptcha" data-sitekey="6LcX1v4SAAAAAOf5ffTwmpYwTx07N5Df5ztmSkde"></div><br>
